--- a/PIC_SERVER/FPS/FPS.csproj
+++ b/PIC_SERVER/FPS/FPS.csproj
@@ -84,6 +84,12 @@
     <Compile Include="SetDataTime.Designer.cs">
       <DependentUpon>SetDataTime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Transactions_View.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Transactions_View.Designer.cs">
+      <DependentUpon>Transactions_View.cs</DependentUpon>
+    </Compile>
     <Compile Include="Validate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </Compile>
     <EmbeddedResource Include="SetDataTime.resx">
       <DependentUpon>SetDataTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Transactions_View.resx">
+      <DependentUpon>Transactions_View.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Validate.resx">
       <DependentUpon>Validate.cs</DependentUpon>
